--- a/books/generative_deep_learning/pytorch/chap04-pt1_gan_bricks.ipynb
+++ b/books/generative_deep_learning/pytorch/chap04-pt1_gan_bricks.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "6979d0d9",
    "metadata": {},
    "outputs": [],
@@ -163,35 +163,35 @@
     "        super().__init__()\n",
     "        self.latent_dim = latent_dim\n",
     "\n",
-    "        self.conv1 = nn.Sequential(\n",
+    "        self.deconv1 = nn.Sequential(\n",
     "            nn.ConvTranspose2d(latent_dim, 512, kernel_size=4, stride=1, padding=0, bias=False),\n",
     "            nn.BatchNorm2d(512, momentum=0.9),\n",
     "            nn.LeakyReLU(0.2, inplace=True)\n",
     "        )\n",
-    "        self.conv2 = nn.Sequential(\n",
+    "        self.deconv2 = nn.Sequential(\n",
     "            nn.ConvTranspose2d(512, 256, kernel_size=4, stride=2, padding=1, bias=False),\n",
     "            nn.BatchNorm2d(256, momentum=0.9),\n",
     "            nn.LeakyReLU(0.2, inplace=True)\n",
     "        )\n",
-    "        self.conv3 = nn.Sequential(\n",
+    "        self.deconv3 = nn.Sequential(\n",
     "            nn.ConvTranspose2d(256, 128, kernel_size=4, stride=2, padding=1, bias=False),\n",
     "            nn.BatchNorm2d(128, momentum=0.9),\n",
     "            nn.LeakyReLU(0.2, inplace=True)\n",
     "        )\n",
-    "        self.conv4 = nn.Sequential(\n",
+    "        self.deconv4 = nn.Sequential(\n",
     "            nn.ConvTranspose2d(128, 64, kernel_size=4, stride=2, padding=1, bias=False),\n",
     "            nn.BatchNorm2d(64, momentum=0.9),\n",
     "            nn.LeakyReLU(0.2, inplace=True)\n",
     "        )\n",
-    "        self.conv5 = nn.ConvTranspose2d(64, out_channels, kernel_size=4, stride=2, padding=1, bias=False)\n",
+    "        self.deconv5 = nn.ConvTranspose2d(64, out_channels, kernel_size=4, stride=2, padding=1, bias=False)\n",
     "\n",
     "    def forward(self, z):\n",
     "        x = z.view(-1, z.size(1), 1, 1)  # (B, Z_DIM) -> (B, Z_DIM, 1, 1)\n",
-    "        x = self.conv1(x)\n",
-    "        x = self.conv2(x)\n",
-    "        x = self.conv3(x)\n",
-    "        x = self.conv4(x)\n",
-    "        x = self.conv5(x)\n",
+    "        x = self.deconv1(x)\n",
+    "        x = self.deconv2(x)\n",
+    "        x = self.deconv3(x)\n",
+    "        x = self.deconv4(x)\n",
+    "        x = self.deconv5(x)\n",
     "        return torch.tanh(x)\n",
     "    \n",
     "    @torch.no_grad()\n",
