--- a/gan/gan_cifar10/run_wgan.ipynb
+++ b/gan/gan_cifar10/run_wgan.ipynb
@@ -26,13 +26,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import gc, torch\n",
+    "import torch\n",
+    "import gc\n",
     "\n",
-    "def initialize(seed=42):\n",
-    "    gc.collect()\n",
+    "def reset_environment(seed=42):\n",
+    "    set_seed(seed)\n",
+    "    \n",
     "    if torch.cuda.is_available():\n",
     "        torch.cuda.empty_cache()\n",
-    "    set_seed(seed)"
+    "        torch.cuda.synchronize()\n",
+    "    \n",
+    "    gc.collect()\n",
+    "    \n",
+    "    print(f\">> Environment reset with seed={seed}\")\n",
+    "    if torch.cuda.is_available():\n",
+    "        allocated = torch.cuda.memory_allocated() / 1024**2\n",
+    "        reserved = torch.cuda.memory_reserved() / 1024**2\n",
+    "        print(f\"   GPU memory: {allocated:.2f} MB allocated, {reserved:.2f} MB reserved\")\n",
+    "\n",
+    "\n",
+    "def cleanup_experiment(gan=None, train_loader=None):\n",
+    "    if gan is not None:\n",
+    "        if hasattr(gan, 'c_optimizer'):\n",
+    "            del gan.c_optimizer\n",
+    "        if hasattr(gan, 'g_optimizer'):\n",
+    "            del gan.g_optimizer\n",
+    "        \n",
+    "        if hasattr(gan, 'critic'):\n",
+    "            del gan.critic\n",
+    "        if hasattr(gan, 'generator'):\n",
+    "            del gan.generator\n",
+    "        \n",
+    "        del gan\n",
+    "    \n",
+    "    if train_loader is not None:\n",
+    "        del train_loader\n",
+    "    \n",
+    "    gc.collect()\n",
+    "    torch.cuda.empty_cache()\n",
+    "    print(\">> Cleanup completed\")"
    ]
   },
   {
@@ -67,23 +99,27 @@
      "text": [
       "[  1/5] d_loss:-15.399, real_loss:-2.541, fake_loss:-12.858, g_loss:13.173, gp:0.273                                                  \n",
       "[  2/5] d_loss:-7.456, real_loss:-2.606, fake_loss:-4.850, g_loss:5.091, gp:0.168                                                  \n",
-      "[  3/5] d_loss:-6.573, real_loss:-1.480, fake_loss:-5.092, g_loss:5.139, gp:0.094                                                  \n",
-      "[  4/5] d_loss:-43.401, real_loss:-36.333, fake_loss:-7.068, g_loss:7.150, gp:1.206                                                  \n",
-      "[  5/5] d_loss:-5.856, real_loss:2.679, fake_loss:-8.535, g_loss:8.607, gp:0.193                                                  \n",
-      ">> ./outputs/cifar10_wgan-gp_one-sided_epoch005.png is saved.\n",
-      "\n",
-      "[  1/5] d_loss:-6.919, real_loss:-0.680, fake_loss:-6.239, g_loss:6.287, gp:0.267                                                  \n",
-      "[  2/5] d_loss:-7.372, real_loss:-2.642, fake_loss:-4.731, g_loss:4.759, gp:0.398                                                  \n",
-      "[  3/5] d_loss:-7.129, real_loss:-1.990, fake_loss:-5.139, g_loss:5.217, gp:0.591                                                  \n",
-      "[  4/5] d_loss:-7.021, real_loss:0.184, fake_loss:-7.205, g_loss:7.191, gp:0.411                                                   \n",
-      "[  5/5] d_loss:-7.553, real_loss:1.269, fake_loss:-8.822, g_loss:8.906, gp:0.549                                                  \n",
-      ">> ./outputs/cifar10_wgan-gp_one-sided_epoch010.png is saved.\n",
-      "\n"
+      "                                                                                                                                   \r"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 13\u001b[39m\n\u001b[32m     11\u001b[39m generator = Generator32(latent_dim=LATENT_DIM, out_channels=OUT_CHANNELS, base=BASE)\n\u001b[32m     12\u001b[39m gan = WGAN(discriminator, generator, use_gp=\u001b[38;5;28;01mTrue\u001b[39;00m, one_sided=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m---> \u001b[39m\u001b[32m13\u001b[39m history = \u001b[43mtrain_gan\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgan\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_epochs\u001b[49m\u001b[43m=\u001b[49m\u001b[43mNUM_EPOCHS\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtotal_epochs\u001b[49m\u001b[43m=\u001b[49m\u001b[43mTOTAL_EPOCHS\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[32m     14\u001b[39m \u001b[43m                    \u001b[49m\u001b[43mnoises\u001b[49m\u001b[43m=\u001b[49m\u001b[43mnoises\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m=\u001b[49m\u001b[43mFILENAME\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     16\u001b[39m cleanup_experiment(gan, train_loader)\n\u001b[32m     17\u001b[39m \u001b[38;5;28;01mdel\u001b[39;00m discriminator, generator, dataset, noises\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/mnt/d/github/computer_vision/gan/gan_cifar10/train.py:17\u001b[39m, in \u001b[36mtrain_gan\u001b[39m\u001b[34m(gan, train_loader, num_epochs, total_epochs, noises, labels, filename)\u001b[39m\n\u001b[32m     15\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(total_epochs // num_epochs):\n\u001b[32m     16\u001b[39m     epoch += num_epochs\n\u001b[32m---> \u001b[39m\u001b[32m17\u001b[39m     epoch_history = \u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgan\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_epochs\u001b[49m\u001b[43m=\u001b[49m\u001b[43mnum_epochs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     18\u001b[39m     update_history(history, epoch_history)\n\u001b[32m     20\u001b[39m     images = create_images(gan.generator, noises, labels=labels)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/mnt/d/github/computer_vision/gan/gan_cifar10/train.py:72\u001b[39m, in \u001b[36mfit\u001b[39m\u001b[34m(model, train_loader, num_epochs, valid_loader)\u001b[39m\n\u001b[32m     70\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m epoch \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[32m1\u001b[39m, num_epochs + \u001b[32m1\u001b[39m):\n\u001b[32m     71\u001b[39m     epoch_info = \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m[\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mepoch\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m3d\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnum_epochs\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m]\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m72\u001b[39m     train_results = \u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_loader\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     73\u001b[39m     train_info = \u001b[33m\"\u001b[39m\u001b[33m, \u001b[39m\u001b[33m\"\u001b[39m.join([\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mk\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m:\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mv\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.3f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m k, v \u001b[38;5;129;01min\u001b[39;00m train_results.items()])\n\u001b[32m     75\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m name, value \u001b[38;5;129;01min\u001b[39;00m train_results.items():\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/mnt/d/github/computer_vision/gan/gan_cifar10/train.py:36\u001b[39m, in \u001b[36mtrain\u001b[39m\u001b[34m(model, dataloader)\u001b[39m\n\u001b[32m     33\u001b[39m batch_size = batch[\u001b[33m\"\u001b[39m\u001b[33mimage\u001b[39m\u001b[33m\"\u001b[39m].shape[\u001b[32m0\u001b[39m]\n\u001b[32m     34\u001b[39m total += batch_size\n\u001b[32m---> \u001b[39m\u001b[32m36\u001b[39m outputs = \u001b[43mmodel\u001b[49m\u001b[43m.\u001b[49m\u001b[43mtrain_step\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbatch\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     37\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m name, value \u001b[38;5;129;01min\u001b[39;00m outputs.items():\n\u001b[32m     38\u001b[39m     results.setdefault(name, \u001b[32m0.0\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/mnt/d/github/computer_vision/gan/gan_cifar10/gan.py:170\u001b[39m, in \u001b[36mWGAN.train_step\u001b[39m\u001b[34m(self, batch)\u001b[39m\n\u001b[32m    168\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m.d_steps):\n\u001b[32m    169\u001b[39m     real_logits = \u001b[38;5;28mself\u001b[39m.critic(real_images)\n\u001b[32m--> \u001b[39m\u001b[32m170\u001b[39m     noises = \u001b[43mtorch\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrandn\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mlatent_dim\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mto\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mdevice\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    171\u001b[39m     fake_images = \u001b[38;5;28mself\u001b[39m.generator(noises).detach()\n\u001b[32m    172\u001b[39m     fake_logits = \u001b[38;5;28mself\u001b[39m.critic(fake_images)\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
      ]
     }
    ],
    "source": [
-    "initialize(seed=SEED)\n",
+    "set_seed(SEED)\n",
     "LOSS_TYPE = \"gp_one-sided\"\n",
     "FILENAME = f\"cifar10_wgan-{LOSS_TYPE}\"\n",
     "\n",
@@ -96,7 +132,10 @@
     "generator = Generator32(latent_dim=LATENT_DIM, out_channels=OUT_CHANNELS, base=BASE)\n",
     "gan = WGAN(discriminator, generator, use_gp=True, one_sided=True)\n",
     "history = train_gan(gan, train_loader, num_epochs=NUM_EPOCHS, total_epochs=TOTAL_EPOCHS, \n",
-    "                    noises=noises, filename=FILENAME)"
+    "                    noises=noises, filename=FILENAME)\n",
+    "\n",
+    "cleanup_experiment(gan, train_loader)\n",
+    "del discriminator, generator, dataset, noises"
    ]
   },
   {
@@ -109,6 +148,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      ">> Environment reset with seed=42\n",
+      "   GPU memory: 0.00 MB allocated, 0.00 MB reserved\n",
       "[  1/5] d_loss:-0.501, real_loss:-0.255, fake_loss:-0.245, g_loss:0.248                                                  \n",
       "[  2/5] d_loss:-0.464, real_loss:-0.237, fake_loss:-0.227, g_loss:0.230                                                  \n",
       "[  3/5] d_loss:-0.347, real_loss:-0.179, fake_loss:-0.168, g_loss:0.171                                                  \n",
@@ -122,12 +163,13 @@
       "[  4/5] d_loss:-0.226, real_loss:-0.115, fake_loss:-0.111, g_loss:0.109                                                  \n",
       "[  5/5] d_loss:-0.214, real_loss:-0.110, fake_loss:-0.104, g_loss:0.103                                                  \n",
       ">> ./outputs/cifar10_wgan-default_epoch010.png is saved.\n",
-      "\n"
+      "\n",
+      ">> Cleanup completed\n"
      ]
     }
    ],
    "source": [
-    "initialize(seed=SEED)\n",
+    "reset_environment(SEED)\n",
     "LOSS_TYPE = \"default\"\n",
     "FILENAME = f\"cifar10_wgan-{LOSS_TYPE}\"\n",
     "\n",
@@ -140,7 +182,10 @@
     "generator = Generator32(latent_dim=LATENT_DIM, out_channels=OUT_CHANNELS, base=BASE)\n",
     "gan = WGAN(discriminator, generator, use_gp=False, one_sided=False)\n",
     "history = train_gan(gan, train_loader, num_epochs=NUM_EPOCHS, total_epochs=TOTAL_EPOCHS, \n",
-    "                    noises=noises, filename=FILENAME)"
+    "                    noises=noises, filename=FILENAME)\n",
+    "\n",
+    "cleanup_experiment(gan, train_loader)\n",
+    "del discriminator, generator, dataset, noises"
    ]
   },
   {
@@ -153,6 +198,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      ">> Environment reset with seed=42\n",
+      "   GPU memory: 0.00 MB allocated, 0.00 MB reserved\n",
       "[  1/5] d_loss:-15.457, real_loss:-2.429, fake_loss:-13.028, g_loss:13.346, gp:0.270                                                  \n",
       "[  2/5] d_loss:-7.344, real_loss:-2.331, fake_loss:-5.012, g_loss:5.149, gp:0.178                                                  \n",
       "[  3/5] d_loss:-5.385, real_loss:-0.324, fake_loss:-5.061, g_loss:5.085, gp:0.083                                                  \n",
@@ -166,12 +213,13 @@
       "[  4/5] d_loss:-6.166, real_loss:-0.886, fake_loss:-5.280, g_loss:5.377, gp:0.381                                                  \n",
       "[  5/5] d_loss:-6.260, real_loss:0.967, fake_loss:-7.227, g_loss:7.387, gp:0.343                                                  \n",
       ">> ./outputs/cifar10_wgan-gp_epoch010.png is saved.\n",
-      "\n"
+      "\n",
+      ">> Cleanup completed\n"
      ]
     }
    ],
    "source": [
-    "initialize(seed=SEED)\n",
+    "reset_environment(SEED)\n",
     "LOSS_TYPE = \"gp\"\n",
     "FILENAME = f\"cifar10_wgan-{LOSS_TYPE}\"\n",
     "\n",
@@ -184,7 +232,10 @@
     "generator = Generator32(latent_dim=LATENT_DIM, out_channels=OUT_CHANNELS, base=BASE)\n",
     "gan = WGAN(discriminator, generator, use_gp=True, one_sided=False)\n",
     "history = train_gan(gan, train_loader, num_epochs=NUM_EPOCHS, total_epochs=TOTAL_EPOCHS, \n",
-    "                    noises=noises, filename=FILENAME)"
+    "                    noises=noises, filename=FILENAME)\n",
+    "\n",
+    "cleanup_experiment(gan, train_loader)\n",
+    "del discriminator, generator, dataset, noises"
    ]
   }
  ],
